--- a/PSgrammar.cfg
+++ b/PSgrammar.cfg
@@ -1,19 +1,22 @@
 S -> TP | CP
-TP -> DP Tp | Tp
-Tp -> Aux VP | VP | Cop Adj | Cop DP
+TP -> DP Tbar | Tbar
+Tbar -> Aux VP | VP | Cop Adj | Cop DP
 DP -> NP | Det NP 
 NP -> N | Adj NP | N PP | N CP
-PP -> P NP
-CP -> Wh Cp | V TP | Cp
-Cp -> Aux TP | TP | C TP
-VP -> V | V DP | V DP PP | V CP
+PP -> P DP
+CP -> Wh Cbar | V TP | Cbar
+Cbar -> Aux TP | TP | C TP
+VP -> VI | VT DP | VD DP PP | VS CP
 
 Wh -> "Who" | "What" | "Where" | "When" | "Why" | "How"
 Aux -> "is" | "are" | "am" | "will" | "do" | "did" | "does" | "can" 
 C -> "that"
 Det -> "a" | "an" | "the" | "my" | "your" | "his" | "hers"| "our" | "their"
-N -> "I" | "you" | "he" | "she" | "we" | "they" | "house" | "bread" | "name"
-V -> "want" | "can" | "eating" | "put"
+N -> "I" | "you" | "he" | "she" | "we" | "they" | "house" | "bread" | "name"|"girl"|"table"
+VT -> "want" | "wants" | "buy" | "buys"
+VI -> "walks" | "swims" | "walk" | "swim"
+VD -> "put"
+VS -> "think"
 Cop -> "is" | "was" | "am" | "are" | "were"
 P -> "in" | "on" | "to"
 Adj -> "red"
